--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,17 @@
             <artifactId>selenium-java</artifactId>
             <version>2.53.1</version>
         </dependency>
+        <dependency>
+            <groupId>Biz_1</groupId>
+            <artifactId>Biz_1</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>Biz_1</groupId>
+            <artifactId>Biz_1</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
