--- a/pom.xml
+++ b/pom.xml
@@ -60,5 +60,11 @@
             <artifactId>junit</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>Biz_1</groupId>
+            <artifactId>Biz_1</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
