--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>reflections</artifactId>
             <version>LATEST</version>
         </dependency>
-
+        <dependency>
+            <groupId>Biz_1</groupId>
+            <artifactId>Biz_1</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
