--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,9 @@
             <version>LATEST</version>
         </dependency>
         <dependency>
-            <groupId>Biz_1</groupId>
-            <artifactId>Biz_1</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
